# AGVirtualTelescope

./: CMakeLists.txt  main.cpp
src/: AGKinematic.cpp  AGKinematic.h  AGVirtualTelescope.cpp  AGVirtualTelescope.h  CMakeLists.txt  main.cpp
tests/: test.cpp
